fix: alignment of date picker icon dot

--- a/src/components/FloatingDatePicker/floatingDatePicker.css
+++ b/src/components/FloatingDatePicker/floatingDatePicker.css
@@ -44,8 +44,8 @@
 
 #calendar-widget > .widget-layout .floating-datepicker .has-date .dot {
   position: absolute;
-  top: -2px;
-  right: 2px;
+  top: -1px;
+  right: 3px;
   width: 9px;
   height: 9px;
   background-color: var(--main-dynamic-color);
